--- a/app.css
+++ b/app.css
@@ -1,7 +1,15 @@
+    /* Your styles should be mobile-first and responsive */
+
+    /** 
+  * If you are unclear on how to utilize a mobile-first, responsive technique to write your CSS, here is an example: 
+  *
+  * https://github.com/andreacardybailey/responsive_example/blob/master/styles/responsive-base.css 
+  *
+*/
 
     .mainPage {
         margin: 45px;
-        border: 1px solid #690350;
+        border: 3px solid #690350;
         background-color: pink;
         padding: 30px;
         text-align: center;
@@ -18,4 +26,5 @@
 
     h1 {
         text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     }
